src/test/ui/borrowck/borrowck-init-in-fn-expr.stderr
error[E0381]: use of possibly uninitialized variable: `i`
  --> $DIR/borrowck-init-in-fn-expr.rs:4:9
   |
LL |         i
   |         ^ use of possibly uninitialized `i`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
